fix(backend): skill service reliability, token limits, and GDPR erasure
Apply 12 backend fixes: per-skill max_tokens in NvidiaService, remove dead
AiEvalCache in-memory store, move AI calls outside write transactions,
runAllSkills PROFILE_INCOMPLETE continuation, batch executor shutdown,
tailor normalization DB cache, targeted conversation delete, batch status
off-by-one, email notify whitelist, and sentence-counter regex. Extend GDPR
erasure audit, consent withdrawal, export scope, and pagesflow storage docs.

Co-authored-by: Cursor <cursoragent@cursor.com>