@@ -1,12 +1,7 @@
 package com.careerops.service;
 
+import com.careerops.dto.SkillExecutionContext;
 import com.careerops.model.AgentResult;
-import com.careerops.model.Job;
-import com.careerops.model.UserJob;
-import com.careerops.model.UserProfile;
-import com.careerops.repository.JobRepository;
-import com.careerops.repository.UserJobRepository;
-import com.careerops.repository.UserProfileRepository;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.node.ArrayNode;
@@ -21,12 +16,12 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.springframework.test.util.ReflectionTestUtils;
 
 import java.util.List;
-import java.util.Optional;
 import java.util.Set;
 import java.util.UUID;
 import java.util.stream.StreamSupport;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
@@ -36,95 +31,31 @@ class NvidiaAgentServiceTest {
     @Mock SkillToolDispatcher dispatcher;
     @Mock TokenUsageService tokenUsageService;
     @Mock UserConsentService consentService;
-    @Mock UserProfileRepository profileRepository;
-    @Mock CvService cvService;
-    @Mock JobRepository jobRepository;
-    @Mock UserJobRepository userJobRepository;
+    @Mock SkillExecutionContextBuilder contextBuilder;
 
     NvidiaAgentService service;
     UUID userId = UUID.randomUUID();
     UUID userJobId = UUID.randomUUID();
-    UUID jobId = UUID.randomUUID();
 
     @BeforeEach
     void setUp() {
         service = new NvidiaAgentService(
             dispatcher, new ObjectMapper(), CircuitBreakerRegistry.ofDefaults(),
-            tokenUsageService, consentService,
-            profileRepository, cvService, jobRepository, userJobRepository,
+            tokenUsageService, consentService, contextBuilder,
             new SimpleMeterRegistry());
         ReflectionTestUtils.setField(service, "apiKey", "test-key");
     }
 
     @Test
-    void buildEnrichedSystemPrompt_includesProfileCvAndJob() {
-        UserProfile profile = new UserProfile();
-        profile.setTargetRoles(new String[]{"Backend Engineer"});
-        profile.setTechStack(new String[]{"Java", "Spring"});
-        profile.setLocation("Dublin");
-        profile.setSalaryMin(80000);
-        profile.setSalaryMax(100000);
-        profile.setExperienceLevel("senior");
-        profile.setSponsorshipRequired(false);
-        when(profileRepository.findByUserId(userId)).thenReturn(Optional.of(profile));
-        when(cvService.activeCvText(userId)).thenReturn("Jane Doe\n5 years Java");
-
-        UserJob uj = new UserJob();
-        uj.setJobId(jobId);
-        Job job = new Job();
-        job.setTitle("Senior Java Dev");
-        job.setCompany("Acme");
-        job.setLocation("Dublin");
-        job.setDescription("Build APIs");
-        when(userJobRepository.findByIdAndUserId(userJobId, userId)).thenReturn(Optional.of(uj));
-        when(jobRepository.findById(jobId)).thenReturn(Optional.of(job));
-
-        String result = ReflectionTestUtils.invokeMethod(
-            service, "buildEnrichedSystemPrompt", "BASE", userId, userJobId);
-
-        assertThat(result).startsWith("BASE");
-        assertThat(result).contains("PRE-LOADED CONTEXT");
-        assertThat(result).contains("do NOT call read_profile");
-        assertThat(result).contains("USER PROFILE");
-        assertThat(result).contains("target_roles: [Backend Engineer]");
-        assertThat(result).contains("USER CV/RESUME");
-        assertThat(result).contains("Jane Doe");
-        assertThat(result).contains("JOB POSTING");
-        assertThat(result).contains("title: Senior Java Dev");
-        assertThat(result).contains("company: Acme");
-    }
-
-    @Test
-    void buildEnrichedSystemPrompt_truncatesLongCv() {
-        when(profileRepository.findByUserId(userId)).thenReturn(Optional.empty());
-        when(cvService.activeCvText(userId)).thenReturn("x".repeat(7000));
-        String result = ReflectionTestUtils.invokeMethod(
-            service, "buildEnrichedSystemPrompt", "BASE", userId, null);
-        assertThat(result).contains("...[CV truncated]");
-        assertThat(result).doesNotContain("x".repeat(7000));
-    }
-
-    @Test
-    void buildEnrichedSystemPrompt_survivesRepositoryFailure() {
-        when(profileRepository.findByUserId(userId)).thenThrow(new RuntimeException("db down"));
-        when(cvService.activeCvText(userId)).thenReturn("cv");
-        String result = ReflectionTestUtils.invokeMethod(
-            service, "buildEnrichedSystemPrompt", "BASE", userId, null);
-        assertThat(result).contains("USER CV/RESUME");
-        assertThat(result).doesNotContain("USER PROFILE");
-    }
-
-    @Test
-    void run_enrichesPromptBeforeConfiguredCheck() {
+    void run_buildsContextBeforeConfiguredCheck() {
         ReflectionTestUtils.setField(service, "apiKey", "");
-        when(profileRepository.findByUserId(userId)).thenReturn(Optional.empty());
-        when(cvService.activeCvText(userId)).thenReturn("cv text");
+        when(contextBuilder.build(userId, userJobId, "evaluate"))
+            .thenReturn(new SkillExecutionContext(userId, userJobId, "evaluate", "INLINE"));
 
-        AgentResult result = service.run("BASE PROMPT", new ObjectMapper().createArrayNode(), userId, null, null);
+        AgentResult result = service.run("BASE PROMPT", new ObjectMapper().createArrayNode(), userId, userJobId, "evaluate");
 
         assertThat(result).isInstanceOf(AgentResult.Error.class);
-        verify(profileRepository).findByUserId(userId);
-        verify(cvService).activeCvText(userId);
+        verify(contextBuilder).build(eq(userId), eq(userJobId), eq("evaluate"));
     }
 
     @Test
@@ -212,7 +143,7 @@ class NvidiaAgentServiceTest {
 
     @Test
     void resolveAllowedTools_noSkillIncludesReadProfileResumeJob() {
-        for (String skill : List.of("tailor-resume", "cover-letter", "evaluate", "research", "prep-interview", "compare", "help", null)) {
+        for (String skill : java.util.Arrays.asList("tailor-resume", "cover-letter", "evaluate", "research", "prep-interview", "compare", "help", null)) {
             Set<String> tools = NvidiaAgentService.resolveAllowedTools(skill);
             assertThat(tools).doesNotContain("read_profile", "read_resume", "read_job");
         }
